leo3/tests/ui/leanclass_generic_struct.stderr
error: #[leanclass] does not support generic types yet
 --> tests/ui/leanclass_generic_struct.rs:2:18
  |
2 | struct BadGeneric<T> {
  |                  ^^^
