leo3/tests/ui/leanclass_generic_struct.rs
#[leo3_macros::leanclass]
struct BadGeneric<T> {
    value: T,
}

fn main() {}
